# swagger.yaml
@@ -196,7 +196,7 @@ paths:
         500:
           description: internal server error
 
-   /forgotPassword:
+  /forgotPassword:
     post:
       tags:
         - User
@@ -416,7 +416,7 @@ paths:
                 properties:
                   success:
                     type: boolean
-                  
+
         400:
           description: Bad request
         500:
@@ -428,7 +428,7 @@ paths:
         - Admin
       summary: If user is admin, response will get array of all users
       requestBody:
-        
+
       responses:
         200:
           description: All good success
@@ -459,7 +459,7 @@ paths:
                           type: string
                         createdAt:
                           type: string
-                  
+
         400:
           description: Bad request
         500:
@@ -477,36 +477,36 @@ paths:
           schema:
             type: string
       requestBody:
-        
+
       responses:
         200:
           description: All good success
           content:
             application/json:
               schema:
-                  type: object
-                  properties:
-                    user:
-                      type: object
-                      properties:
-                        name:
-                          type: string
-                        email:
-                          type: string
-                        role:
-                          type: string
-                        photo:
-                          type: object
-                          properties:
-                            id:
-                              type: string
-                            secure_url:
-                              type: string
-                        _id:
-                          type: string
-                        createdAt:
-                          type: string
-                  
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      photo:
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                          secure_url:
+                            type: string
+                      _id:
+                        type: string
+                      createdAt:
+                        type: string
+
         400:
           description: Bad request
         500:
@@ -537,18 +537,18 @@ paths:
           schema:
             type: string
             enum: [user, admin, manager]
-      requestBody: 
+      requestBody:
       responses:
         200:
           description: All good success
           content:
             application/json:
               schema:
-                  type: object
-                  properties:
-                    success:
-                      type: boolean
-                  
+                type: object
+                properties:
+                  success:
+                    type: boolean
+
         400:
           description: Bad request
         500:
@@ -563,18 +563,18 @@ paths:
           required: true
           schema:
             type: string
-      requestBody: 
+      requestBody:
       responses:
         200:
           description: All good success
           content:
             application/json:
               schema:
-                  type: object
-                  properties:
-                    success:
-                      type: boolean
-                  
+                type: object
+                properties:
+                  success:
+                    type: boolean
+
         400:
           description: Bad request
         500:
@@ -586,7 +586,7 @@ paths:
         - Manager
       summary: If manager, response will get array of all users whose role is user
       requestBody:
-        
+
       responses:
         200:
           description: All good success
@@ -617,7 +617,7 @@ paths:
                           type: string
                         createdAt:
                           type: string
-                  
+
         400:
           description: Bad request
         500:
